--- a/doc/README
+++ b/doc/README
@@ -1,5 +1,5 @@
-InfinitecoinV2
-Copyright (c) 2013 InfinitecoinV2 Developers
+ColossusCoin
+Copyright (c) 2013 ColossusCoin Developers
 
 
 NovaCoin 0.3.0 BETA
